Fix dropouts seen with thin lines by using the method described in bug 687721, namely, that of extending the trapezoids filled by a small triangular region at each end.

Local cluster testing shows 66 changes, of which only 20 or so are real.
Of these, most are clearly improvements, and the rest are neutral.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10429 a1074d23-0009-0410-80fe-cf8c14f379e6